@@ -1,5 +1,5 @@
 Package: spatstat.explore
-Version: 3.1-0.004
+Version: 3.1-0.005
 Date: 2023-03-18
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
