@@ -108,6 +108,8 @@ export("compatible.rat")
 export("compileCDF")
 export("compileK")
 export("compilepcf")
+export("Complex.fasp")
+export("Complex.fv")
 export("conform.ratfv")
 export("contour.ssf")
 export("cor.im")
@@ -307,13 +309,13 @@ export("markvario")
 export("maskLaslett")
 export("match2DkernelName")
 export("match.kernel")
-export("max.fv")
+export("Math.fasp")
+export("Math.fv")
 export("max.ssf")
 export("mctest.progress")
 export("mctest.sigtrace")
 export("mctestSigtraceEngine")
 export("meanlistfv")
-export("min.fv")
 export("min.ssf")
 export("miplot")
 export("names<-.fv")
@@ -328,6 +330,8 @@ export("nndensity.ppp")
 export("nnmean")
 export("nnorient")
 export("nnvario")
+export("Ops.fasp")
+export("Ops.fv")
 export("pairMean")
 export("pairorient")
 export("pairs.im")
@@ -408,7 +412,6 @@ export("quadrat.test.quadratcount")
 export("quadrat.test.splitppp")
 export("quantile.density")
 export("radcumint")
-export("range.fv")
 export("range.ssf")
 export("[.rat")
 export("rat")
@@ -504,6 +507,8 @@ export("stienenSet")
 export("studpermu.test")
 export("subspaceDistance")
 export("summary.envelope")
+export("Summary.fasp")
+export("Summary.fv")
 export("summary.ssf")
 export("thresholdCI")
 export("thresholdSelect")
@@ -530,6 +535,14 @@ export("with.ssf")
 export("X2testEngine")
 
 # .......  Special cases ........... 
+S3method("Complex", "fasp")
+S3method("Complex", "fv")
+S3method("Math", "fasp")
+S3method("Math", "fv")
+S3method("Ops", "fasp")
+S3method("Ops", "fv")
+S3method("Summary", "fasp")
+S3method("Summary", "fv")
 # .......  End of special cases  ... 
 
 # ......................................... 
@@ -592,9 +605,7 @@ S3method("is.poisson", "exactppm")
 S3method("is.stationary", "exactppm")
 S3method("[", "localpcfmatrix")
   S3method("marks", "ssf")
-  S3method("max", "fv")
   S3method("max", "ssf")
-  S3method("min", "fv")
   S3method("min", "ssf")
   S3method("nnclean", "pp3")
   S3method("nnclean", "ppp")
@@ -654,7 +665,6 @@ S3method("quadrat.test", "ppp")
 S3method("quadrat.test", "quadratcount")
 S3method("quadrat.test", "splitppp")
 S3method("quantile", "density")
-  S3method("range", "fv")
   S3method("range", "ssf")
 S3method("[", "rat")
 S3method("relrisk", "ppp")
